docs/v3.5.4/_sources/gallery/single/scatterer/footprint.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/scatterer/footprint.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_scatterer_footprint.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_scatterer_footprint.py:


Scatterer Footprint Calculation and Visualization
=================================================

This example demonstrates how to compute and visualize the footprint of a scatterer using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 7-45



.. image-sg:: /gallery/single/scatterer/images/sphx_glr_footprint_001.png
   :alt: Scatterer Footprint
   :srcset: /gallery/single/scatterer/images/sphx_glr_footprint_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/PyOptik/material/base_class.py:60: UserWarning: Wavelength range goes from 1.0 µm to 1.0 µm which is outside the allowable range of 5.0 µm to 33.333 µm µm. [Material: BK7]
      warnings.warn(






|

.. code-block:: Python


    # Import necessary components from PyMieSim
    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.detector import CoherentMode
    from PyMieSim.single.source import Gaussian
    from PyOptik import Material
    from PyMieSim.units import micrometer, degree, watt, AU, RIU

    # Define the Gaussian light source with specified properties
    source = Gaussian(
        wavelength=1 * micrometer,  # 1000 nm
        polarization=0 * degree,
        optical_power=1 * watt,  # Arbitrary units
        NA=0.3 * AU  # Numerical Aperture
    )

    # Create a spherical scatterer with a specified diameter and property
    scatterer = Sphere(
        diameter=2 * micrometer,  # 2000 nm
        source=source,
        medium_property=1.0 * RIU,  # Refractive index of the surrounding medium
        property=Material.BK7  # Using BK7 glass property
    )

    # Define the LPMode detector with specific parameters
    detector = CoherentMode(
        mode_number="HG02",
        NA=0.3 * AU,
        sampling=200 * AU,  # Number of sampling points
        gamma_offset=0 * degree,
        phi_offset=0 * degree,
    )

    # Compute the footprint data using the defined scatterer and detector
    data = detector.get_footprint(scatterer)

    # Plot the computed footprint data
    figure = data.plot()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.208 seconds)


.. _sphx_glr_download_gallery_single_scatterer_footprint.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: footprint.ipynb <footprint.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: footprint.py <footprint.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: footprint.zip <footprint.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
